<?php
namespace FizzBuzz\service\printer;

interface IPrinter
{
	public function print(array $values);
}
